--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,8 +9,29 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --page-background-image: url("../images/cover-image-dark.png");
+
+  --main-title-color: var(--color-pink-6, #DB00FF);
+  --accent-color: var(--color-pink-5, #FF0070);
+  --text-main-color: var(--color-grey-2, #000028);
+  --text-second-color: var(--color-pink-2, #F1B2CE);
+  --theme-menu-color: var(--color-pink-5, #FF0070);
+  --decoration-color: var(--color-pink-5, #FF0070);
+  
 }
 
-.theme-dark .page {
+@media (prefers-color-scheme: dark) {
+
+  .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+    --page-background-image: url("../images/cover-image-dark.png");
+  
+    --main-title-color: var(--color-pink-6, #DB00FF);
+    --accent-color: var(--color-pink-5, #FF0070);
+    --text-main-color: var(--color-grey-2, #000028);
+    --text-second-color: var(--color-pink-2, #F1B2CE);
+    --theme-menu-color: var(--color-pink-5, #FF0070);
+    --decoration-color: var(--color-pink-5, #FF0070);
+}
+
 }
