--- a/styles/light.css
+++ b/styles/light.css
@@ -5,12 +5,26 @@
 */
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --page-background-image: url("../images/cover-image-light.png");
+  --main-title-color: var(--color-pink-2, #FFC2E6);
+  --accent-color: var(--color-pink-4, #FF8DCB);
+  --text-main-color: var(--color-grey-1, #353430);
+  --text-second-color: var(--color-grey-1, #353430);
+  --theme-menu-color: var(--color-grey-1, #353430);
+  --decoration-color: transparent;
 }
 
-.theme-light .page {
+@media (prefers-color-scheme: light) {
+
+  .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+    --page-background-image: url("../images/cover-image-light.png");
+    --main-title-color: var(--color-pink-2, #FFC2E6);
+    --accent-color: var(--color-pink-4, #FF8DCB);
+    --text-main-color: var(--color-grey-1, #353430);
+    --text-second-color: var(--color-grey-1, #353430);
+    --theme-menu-color: var(--color-grey-1, #353430);
+    --decoration-color: transparent;
+}
+
 }
