--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,437 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  /* сохраните в разметке и стилях класс page у тега body. 
+  Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background: var(--page-background-image) no-repeat center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.header {
+  position: relative;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  grid-template-columns: 1fr 1fr;
+  min-block-size: 668px;
+  padding: 10px;
+  block-size: 100vh;
+}
+
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--decoration-color);
+  border-right: 1px solid var(--decoration-color);
+}
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--decoration-color);
+  border-left: 1px solid var(--decoration-color);
+}
+
+
+.header__theme-menu {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  justify-self: end;
+  align-self: center;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
+  font-size: 18px;
+  
+}
+
+.header__theme-menu-button {
+  border: none;
+  padding: 0 13px;
+  outline: 1px solid transparent;
+  color: var(--theme-menu-color);
+  text-transform: lowercase;
+  background-color: transparent;
+  transition-property: outline;
+  cursor: pointer;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--theme-menu-color);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--theme-menu-color);
+  outline: none;
+}
+
+.header__theme-menu-button_active {
+  outline: 1px solid var(--theme-menu-color);
+  pointer-events: none;
+}
+
+.title {
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+  align-self: start;
+  margin: 0;
+  font-size: clamp(7.25rem, 5.7694rem + 6.3174vw, 9.8125rem);
+  font-weight: bold;
+  line-height: 82.5%;
+  color: var(--main-title-color);
+  text-shadow: 4px 4px 0 var(--accent-color);
+
+}
+
+.title-description {
+  grid-column: 1 / 3;
+  grid-row: 3 / 4;
+  align-self: center;
+  color: var(--text-main-color);
+  font-size: 18px;
+  font-weight: bold;
+  white-space: pre-line;
+}
+
+
+.title-decor {
+  background-color: var(--accent-color);
+}
+
+.rec {
+  position: absolute;
+  top: 10px; 
+  right: 19px;
+  line-height: 25px;
+  color: var(--decoration-color);
+  text-transform: uppercase;
+  font-size: 18px;
+}
+
+.rec::after {
+  content: "";
+  display: inline-block;
+  width: 9px;
+  height: 9px;
+  background-color: var(--decoration-color);
+  border-radius: 50%;
+  margin-left: 10px;
+  margin-bottom: 2px;
+  position: relative;
+  box-shadow: 0 0 4px 3px var(--decoration-color);
+
+}
+
+.main {
+  margin: 10px;
+}
+
+.main__why {
+  padding-top: 30px;
+}
+
+.main__title {
+  color: var(--accent-color);
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.main__subtitle {
+  color: var(--text-main-color);
+  margin-top: 21px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.main__subtitle-normal {
+  margin-top: 20px;
+  font-weight: normal;
+}
+
+.main__text {
+  color: var(--text-second-color);
+  margin-top: 10px;
+  line-height: 23.4px;
+  font-size: 18px;
+}
+
+
+.text-link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.text-link:hover {
+  border-bottom: 1px solid var(--text-second-color);
+}
+
+.text-link:focus-visible {
+  outline: 1px solid var(--text-second-color);
+
+}
+
+.main__what {
+  padding-top: 50px;
+}
+
+.main__how {
+  padding-top: 50px;
+}
+
+.gallery{
+  margin-top: 30px;
+  margin-bottom: 40px;
+  display: grid;
+  gap: 10px;
+}
+
+.gallery-image {
+  display: block;
+  inline-size: 100%;
+  block-size: 100%;
+  max-block-size: 100%;
+  object-fit: cover
+}
+
+.footer {
+  position: relative;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  grid-template-columns: 1fr 1fr;
+  min-block-size: 668px;
+  padding: 10px;
+  block-size: 100vh;
+  }
+
+
+.footer-decorated-zone::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);
+}
+
+.footer-decorated-zone::after {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);
+}
+
+.footer .title {
+  justify-self: center;
+  font-size: clamp(7.25rem, 5.7694rem + 6.3174vw, 9.8125rem);
+  font-weight: bold;
+  line-height: 82.5%;
+  color: var(--main-title-color);
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+
+@media (min-width: 768px) {
+
+  .header {
+    padding: 20px;
+  }
+
+  .title-description {
+    grid-column: 2 / 3;
+  }
+
+  .decorated-zone {
+    min-block-size: 96vh;
+  }
+
+  .title {
+    margin-left: -20px;
+  }
+
+  .decorated-zone::before {
+  top: 20px;
+  right: 20px;
+
+  }
+
+  .decorated-zone::after {
+  bottom: 20px;
+  left: 20px;
+  }
+
+  .rec {
+  position: absolute;
+  top: 20px; 
+  right: 29px;
+  }
+ 
+  .main {
+    margin: 20px;
+  }
+  .main__why {
+    display: grid;
+    grid-template-columns: 236px 1fr;
+    gap: 20px;
+    padding-top: 40px;
+  }
+
+  .main__title {
+    grid-column: 1 / 2;
+  }
+
+  .main__subtitle {
+    grid-column: 2 / 3;
+    margin: 0px;
+  }
+
+  .main__why .main__subtitle:not(:first-child) {
+    margin-top: 20px;
+  }
+
+  .main__text {
+    grid-column: 2 / 3;
+  }
+
+  .main__what {
+    display: grid;
+    grid-template-columns: 236px 1fr;
+    grid-template-rows: min-content 1fr;
+    padding-top: 82px;
+  }
+
+  .what__content{
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+  }  
+
+  .main__what .main__title {
+    display: grid;
+    grid-row: 1/ 2;
+  }
+
+  .main__what .main__subtitle {
+    margin-top: 20px;
+  }
+
+  .main__how {
+    display: grid;
+    grid-template-columns: 236px 1fr;
+    gap: 20px;
+    padding-top: 82px;
+  } 
+
+  .main__how .main__subtitle:not(:first-child) {
+    margin-top: 20px;
+  }
+
+  .gallery {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: min-content repeat(3, fit-content(568px));
+    padding-top: 50px;
+    gap: 20px;
+    margin-bottom: 62px;
+  }
+
+  .gallery .main__subtitle {
+  display: grid;
+  grid-column: 1 / 4;
+  grid-row: 1 / 2;
+  }
+
+  .gallery-image_sunset {
+    grid-column: 1 / 3;
+  }
+
+  .gallery-image_ice-cream {
+    grid-column: 3 / 4;
+    grid-row: 2 / 4;
+  } 
+
+  .gallery-image_tape {
+    grid-row: 3 / 5;
+  }
+
+  .gallery-image_street {
+    grid-column: 2 / 4;
+  }
+
+  .footer .title {
+    margin: 0;
+  }
+
+  .footer-decorated-zone::before {
+  top: 20px;
+  right: 20px;
+
+  }
+
+  .footer-decorated-zone::after {
+  bottom: 20px;
+  left: 20px;
+  }
+
+}
+
+@media (min-width: 1024px) {
+
+  .header__theme-menu {
+    grid-column: 1 / 3;
+    justify-self: center;
+    align-self: start; 
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+  .main__why {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .why__content{
+    display: grid;
+    grid-column: 2 / 4;
+  }
+  .main__what {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: auto 1fr; 
+  }
+
+  .what__content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .main__how {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .how__content{
+    display: grid;
+    grid-column: 2 / 4;
+  }
 }
