--- a/styles/style.css
+++ b/styles/style.css
@@ -410,9 +410,8 @@
     grid-template-columns: repeat(3, 1fr);
   }
 
-  .why__conten {
-    display: grid;
-    grid-column: 2 / 4
+  .why__content {
+    grid-column: 2 / 4;
   }
 
   .main__what {
