--- a/styles/variables.css
+++ b/styles/variables.css
@@ -16,7 +16,7 @@
 
   
 
-  --page-background-image: url("../images/cover-image-dark.png");
+  /* --page-background-image: url("../images/cover-image-dark.png");
 
   --main-title-color: var(--color-pink-6, #DB00FF);
   --accent-color: var(--color-pink-5, #FF0070);
@@ -24,6 +24,7 @@
   --text-second-color: var(--color-pink-2, #F1B2CE);
   --theme-menu-color: var(--color-pink-5, #FF0070);
   --decoration-color: var(--color-pink-5, #FF0070);
+  --background-color: var(--color-grey-2, #000028); */
 
 }
 
