--- a/styles/dark.css
+++ b/styles/dark.css
@@ -17,7 +17,7 @@
   --text-second-color: var(--color-pink-2, #F1B2CE);
   --theme-menu-color: var(--color-pink-5, #FF0070);
   --decoration-color: var(--color-pink-5, #FF0070);  
-  /* --background-color: var(--color-grey-2, #000028); */
+  --background-color: var(--color-grey-2, #000028);
 }
 
 
@@ -32,6 +32,6 @@
     --text-second-color: var(--color-pink-2, #F1B2CE);
     --theme-menu-color: var(--color-pink-5, #FF0070);
     --decoration-color: var(--color-pink-5, #FF0070);
-    /* --background-color: var(--color-grey-2, #000028); */
+    --background-color: var(--color-grey-2, #000028);
   }
 }
