--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
   background: var(--page-background-image) no-repeat center;
   background-size: cover;
   background-attachment: fixed;
+  background-color: var(--background-color);
 }
 
 .header {
