--- a/styles/variables.css
+++ b/styles/variables.css
@@ -10,21 +10,11 @@
   --color-pink-4: #FF8DCB;
   --color-pink-5: #FF0070;
   --color-pink-6: #DB00FF;
+  --color-pink-7: #ff007066;
     
   --color-grey-1: #353430;
   --color-grey-2: #000028;
-
-  
-
-  /* --page-background-image: url("../images/cover-image-dark.png");
-
-  --main-title-color: var(--color-pink-6, #DB00FF);
-  --accent-color: var(--color-pink-5, #FF0070);
-  --text-main-color: var(--color-grey-2, #000028);
-  --text-second-color: var(--color-pink-2, #F1B2CE);
-  --theme-menu-color: var(--color-pink-5, #FF0070);
-  --decoration-color: var(--color-pink-5, #FF0070);
-  --background-color: var(--color-grey-2, #000028); */
+  --color-grey-3: #32312D66;
 
 }
 
