--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
   background-size: cover;
   background-attachment: fixed;
   background-color: var(--background-color);
-  padding: 10px;
+  
 }
 
 .header {
@@ -16,10 +16,8 @@
   grid-template-rows: 1fr min-content 1fr;
   grid-template-columns: 1fr 1fr;
   min-block-size: 668px;
-}
-
-.decorated-zone {
-  min-block-size: 97vh;
+  block-size: 100vh; 
+  padding: 10px;
 }
 
 .decorated-zone::before {
@@ -29,8 +27,8 @@
   border-right: 1px solid var(--decoration-color);
   width: 25px;
   height: 25px;
-  inset-inline-end: 0;
-  inset-block-start: 0;
+  top: 10px;
+  right: 10px;
 }
 
 .decorated-zone::after {
@@ -40,7 +38,9 @@
   border-left: 1px solid var(--decoration-color);
   width: 25px;
   height: 25px;
-  inset-block-end: 0;
+  bottom: 10px;
+  left: 10px;
+
 }
 
 .header__theme-menu {
@@ -116,8 +116,8 @@
 
 .rec {
   position: absolute;
-  top: 0px;
-  right: 9px;
+  top: 10px;
+  right: 19px;
   line-height: 25px;
   color: var(--decoration-rec-color);
   text-transform: uppercase;
@@ -138,7 +138,16 @@
 
 }
 
+.main {
+  padding: 10px;
+}
+
 .section {
+  padding-top: 30px;
+}
+
+.main__what, 
+.main__how {
   padding-top: 50px;
 }
 
@@ -183,7 +192,7 @@
 
 .gallery {
   margin-top: 30px;
-  margin-bottom: 50px;
+  margin-bottom: 32px;
   display: grid;
   gap: 10px;
 }
@@ -202,26 +211,10 @@
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
   grid-template-columns: 1fr 1fr;
+  min-block-size: 668px;
+  block-size: 100vh; 
+  padding: 10px;
   }
-
-
-.footer.decorated-zone::before {
-  content: "";
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  border-top: 1px solid var(--decoration-color);
-  border-right: 1px solid var(--decoration-color);
-}
-
-.footer.decorated-zone::after {
-  content: "";
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  border-bottom: 1px solid var(--decoration-color);
-  border-left: 1px solid var(--decoration-color);
-}
 
 .footer .title {
   justify-self: center;
@@ -235,8 +228,23 @@
 
 @media (min-width: 768px) {
 
-  .page {
+  .header {
     padding: 20px;
+  }
+
+  .decorated-zone::before {
+  top: 20px;
+  right: 20px;
+  }
+
+  .decorated-zone::after {
+  bottom: 20px;
+  left: 20px;
+  }
+
+  .rec {
+    top: 20px;
+    right: 29px;
   }
 
   .title {
@@ -247,16 +255,21 @@
     grid-column: 2 / 3;
   }
 
-  .decorated-zone {
-    min-block-size: 96vh;
+  .main {
+    padding: 20px;
   }
 
   .section {
     display: grid;
     grid-template-columns: 236px 1fr;
     gap: 20px;
-    padding-top: 80px;
+    padding-top: 38px;
   }
+
+  .main__what, 
+  .main__how {
+    padding-top: 80px;
+}
 
   .main__subtitle {
     margin: 1px;
@@ -272,7 +285,6 @@
 
   .what__content {
     grid-column: 1 / 3;
-
   }  
 
   .main__how .main__subtitle:not(:first-child) {
@@ -282,7 +294,7 @@
   .gallery {
     padding-top: 50px;
     gap: 20px;
-    margin-bottom: 79px;
+    margin-bottom: 41px;
   }
 
   .gallery .main__subtitle {
@@ -306,6 +318,10 @@
     grid-column: 2 / 4;
   }
 
+  footer {
+    padding: 20px;
+  }
+
   .footer .title {
     margin: 0;
   }
@@ -313,10 +329,6 @@
 }
 
 @media (min-width: 1024px) {
-
-  .decorated-zone {
-    min-block-size: 95vh;
-  }
 
   .title {
     font-size: clamp(7.25rem, 5.7694rem + 6.3174vw, 9.8125rem);
